jetbrains-plugin/src/main/java/com/thelogicmaster/vhdl_sonic/Assembly.bnf
{
  parserClass="com.thelogicmaster.vhdl_sonic.AssemblyParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Assembly"
  psiImplClassSuffix="Impl"
  psiPackage="com.thelogicmaster.vhdl_sonic.psi"
  psiImplPackage="com.thelogicmaster.vhdl_sonic.psi.impl"

  elementTypeHolderClass="com.thelogicmaster.vhdl_sonic.psi.AssemblyTypes"
  elementTypeClass="com.thelogicmaster.vhdl_sonic.psi.AssemblyElementType"
  tokenTypeClass="com.thelogicmaster.vhdl_sonic.psi.AssemblyTokenType"

  psiImplUtilClass="com.thelogicmaster.vhdl_sonic.psi.impl.AssemblyPsiImplUtil"
}

assemblyFile ::= item_*

private item_ ::= (label_definition|instruction|COMMENT|CRLF)

private operand ::= CONSTANT|LABEL|REGISTER|STRING|DEFINITION

instruction ::= MNEMONIC (operand (SEPARATOR operand)*)? {
      mixin="com.thelogicmaster.vhdl_sonic.psi.impl.AssemblyInstructionElementImpl"
      implements="com.thelogicmaster.vhdl_sonic.psi.AssemblyInstructionElement"
      methods=[getMnemonic getLabelNode]
}

label_definition ::= LABEL_DEF {
    mixin="com.thelogicmaster.vhdl_sonic.psi.impl.AssemblyLabelElementImpl"
    implements="com.thelogicmaster.vhdl_sonic.psi.AssemblyLabelElement"
    methods=[getName setName getNameIdentifier getPresentation]
}
